--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form id="search-form" class="search-form">
+    <form id="search-form" class="form">
       <input
         type="text"
         name="searchQuery"
@@ -29,7 +29,7 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="loader hidden" id="loader"></div>
+    <span class="loader hidden" id="loader"></span>
 
     <ul class="gallery" id="gallery"></ul>
 
